fix iphone wrap issue

--- a/src/index.css
+++ b/src/index.css
@@ -103,7 +103,10 @@
   --transition-speed: 0.3s;
 }
 
-html, body { background: var(--bg-primary); color: var(--text-primary); }
+html, body { 
+  background: var(--bg-primary); color: var(--text-primary); 
+  height: -webkit-fill-available;
+}
 
 /* Custom Styles for Premium Feel */
 * {
@@ -613,5 +616,6 @@ input:focus {
   
   .h-screen-custom{
     height: 100dvh;
+    height: -webkit-fill-available;
   }
 }
